RESOLVED FIXED80420
[BlackBerry] Fix cast-align gcc warnings when compiling JSC
https://bugs.webkit.org/show_bug.cgi?id=80420
Summary [BlackBerry] Fix cast-align gcc warnings when compiling JSC
Rob Buis
Reported 2012-03-06 07:38:11 PST
Seeing this in my build: /home/rbuis/work/playbook/webkit_master32/webkit/Source/JavaScriptCore/wtf/RefCountedArray.h:153:87: warning: cast from 'char*' to 'WTF::RefCountedArray<JSC::Instruction>::Header*' increases required alignment of target type [-Wcast-align]
Attachments
Patch (2.23 KB, patch)
2012-03-06 07:41 PST, Rob Buis
barraclough: review+
Rob Buis
Comment 1 2012-03-06 07:41:14 PST
Rob Buis
Comment 2 2012-03-06 12:52:42 PST
Landed in r109952.
Note You need to log in before you can comment on or make changes to this bug.