BlackBerry] Fix cast-align gcc warnings when compiling JSC https://bugs.webkit.org/show_bug.cgi?id=80420

Reviewed by Gavin Barraclough.

Fix warnings given in Blackberry build.

* heap/CopiedBlock.h:
(JSC::CopiedBlock::CopiedBlock):
* wtf/RefCountedArray.h:
(WTF::RefCountedArray::Header::fromPayload):

Canonical link: https://commits.webkit.org/97584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109952 268f45cc-cd09-0410-ab3c-d52691b4dbfc